--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-uuid": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
