--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firestore": "^1.0.1",
     "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.13.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
