--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.5",
     "firebase": "^7.13.1",
+    "history": "^4.10.1",
     "moment": "^2.25.3",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
