--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@tinymce/tinymce-react": "^3.6.0",
     "antd": "^4.2.5",
     "firebase": "^7.13.1",
     "history": "^4.10.1",
@@ -14,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firestore": "^1.0.1",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.3.1",
     "react-router-dom": "^5.1.2",
