--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-firestore": "^1.0.1",
     "react-google-places-autocomplete": "^2.0.6",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.3.1",
     "react-router-dom": "^5.1.2",
