--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@testing-library/user-event": "^7.2.1",
     "@tinymce/tinymce-react": "^3.6.0",
     "antd": "^4.2.5",
-    "firebase": "^7.13.1",
+    "firebase": "^7.17.2",
     "history": "^4.10.1",
+    "html-react-parser": "^0.13.0",
     "moment": "^2.25.3",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
